k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
  namespace: tasky
  labels:
    app.kubernetes.io/name: tasky
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: tasky-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: tasky
    app.kubernetes.io/component: web
